samples/_failures_safe/1761642066_2d07a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_475ebc7a.c: In function ‘main’:
./samples/SAFE/__tmp_475ebc7a.c:144:5: error: expected declaration or statement at end of input
  144 |     printf("=====================\n");
      |     ^~~~~~
